--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "puppeteer": "^24.25.0",
@@ -27,11 +29,14 @@
     "react-dom": "19.1.0",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
-    "twilio": "^5.10.3"
+    "twilio": "^5.10.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
