--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-toast": "^1.2.15",
     "@sendgrid/mail": "^8.1.6",
+    "@sparticuz/chromium": "^141.0.0",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "puppeteer": "^24.25.0",
+    "puppeteer-core": "^24.25.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.3.0",
